<resources>
    <string name="app_name">workstream_platform</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_page_title">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="email_text">Email</string>

    <string name="sign_up_text">Sign Up</string>
    <string name="logout_text">Logout</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="username_text">Username</string>
    <string name="enter_your_username_text">Enter your username</string>
    <string name="enter_your_password_text">Enter your password</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="version_name_text">Version %1$s</string>
    <string name="dont_have_account_text">Don\'t have an account? <u>SIGN UP</u></string>
    
    <!--bottom menu titles-->
    <string name="activity_tab_text">Activity</string>
    <string name="tasks_tab_text">Tasks</string>
    <string name="messages_tab_text">Messages</string>
    <string name="workspaces_tab_text">Workspaces</string>
    <string name="contacts_tab_text">Contacts</string>


    <!-- error messages -->
    <string name="incorrect_username_text">Incorrect username</string>
    <string name="incorrect_password_text">Incorrect password</string>
    <string name="incorrect_username_password_text">Invalid username password combination</string>
    <string name="something_went_wrong_text">Something went wrong</string>
</resources>
