<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/activityFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/activity_tab_text" />

    <item
        android:id="@+id/tasksFragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/tasks_tab_text" />

    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/messages_tab_text" />

    <item
        android:id="@+id/workSpacesFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/workspaces_tab_text" />


    <item
        android:id="@+id/contactsFragment2"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/contacts_tab_text" />


</menu>
