<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="emptyString"
            type="String" />

        <variable
            name="viewModel"
            type="org.behive.com.workstream_platform.screens.registration.login.CheckPasswordViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:src="@drawable/app_icon_white"
            android:tint="@color/silver"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_password_text"
            android:textAllCaps="true"
            android:textColor="@color/charcoal_grey"
            android:textSize="@dimen/middle_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon"
            tools:text="@string/enter_your_password_text" />

        <TextView
            android:id="@+id/password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="22dp"
            android:text="@string/password_text"
            android:textColor="@color/steel"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toTopOf="@id/password_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_password_text_view"
            tools:text="@string/password_text" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:background="@null"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="@={viewModel.password}"
            android:textSize="@dimen/small_text_size"
            app:initActionDone="@{viewModel}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_text_view"
            app:requestFocus="@{emptyString}" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:background="@{TextUtils.isEmpty(viewModel.errorMessage)? @color/silver :@color/watermelon }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/padding"
            android:text="@{viewModel.errorMessage}"
            android:textColor="@color/watermelon"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toTopOf="@id/registr_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintVertical_bias="0.026"
            tools:text="@string/something_went_wrong_text" />


        <ImageView
            android:id="@+id/registr_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg"
            android:onClick="@{(view) -> viewModel.actionDone()}"
            android:src="@drawable/ic_arrow_forward_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/ic_arrow_forward_white_24dp" />

    </android.support.constraint.ConstraintLayout>


</layout>